src/test/ui/async-await/suggest-missing-await.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-missing-await.rs:13:14
   |
LL |     take_u32(x)
   |              ^
   |              |
   |              expected `u32`, found opaque type
   |              help: consider using `.await` here: `x.await`
   |
   = note:     expected type `u32`
           found opaque type `impl std::future::Future`

error[E0308]: mismatched types
  --> $DIR/suggest-missing-await.rs:23:5
   |
LL |     dummy()
   |     ^^^^^^^ expected `()`, found opaque type
   |
   = note: expected unit type `()`
            found opaque type `impl std::future::Future`
help: try adding a semicolon
   |
LL |     dummy();
   |            ^
help: consider using `.await` here
   |
LL |     dummy().await
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
